# Vigil

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  SECURITY.md  gate_profile.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
cortex_forensic/: __init__.py  _shared.py  _stubs.py  gate_models.py  gate_registry.py  meta_findings.py  self_audit.py  source_analysis.py
cortex_forensic/gate_checks/: _ast_helpers.py  atomic_write_checks.py  authority_checks.py  boundary_breach_checks.py  broad_except_checks.py  broad_except_hidden_sentinel_checks.py  common.py  config_safety_checks.py  config_ssot_checks.py  conflict_checks.py  context_fallback_checks.py  context_health_checks.py  contract_shape_drift_checks.py  duplication_checks.py  embedded_string_checks.py  empty_output_checks.py  encoding_checks.py  export_completeness_checks.py  fallback_checks.py  file_proliferation_checks.py  fix_without_test_checks.py  god_object_zones_checks.py  hallucination_checks.py  hunter_artifact_completeness_check.py  implementation_overfit_checks.py  import_integrity_checks.py  imports_in_function_checks.py  performance_checks.py  project_specific_runner.py  provider_capability_checks.py  refactor_completeness_checks.py  reliability_checks.py  reporting_checks.py  runtime_behavior_checks.py  security_injection_checks.py  semantic_intent_checks.py  size_complexity_checks.py  stuck_feature_flag_checks.py  syntax_validity_checks.py  temporal_freshness_checks.py  (+4 more)
cortex_map_builder/: __init__.py  _ast_helpers_minimal.py  _file_count_guard.py  _runtime_ast.py  _runtime_dispatch.py  _seed_helpers.py  authority_builder.py  cli_entry.py  conflict_builder.py  findings_builder.py  map_common.py  map_models.py  map_models_ext.py  map_models_findings.py  map_storage.py  parse_cache.py  runtime_builder.py  runtime_tracer.py  runtime_tracer_entry.py  structural_builder.py
cortex_mcp/: __init__.py  _jobs.py  _paths.py  forensic_server.py  map_server.py
docs/: AUTONOMOUS_FIX_PLAN.md  REALWORLD_METRICS.md  ROADMAP_TO_USABLE_MCP.md
tests/: benchmark_realworld.py  test_agent_brief.py  test_authority_autosurface.py  test_caller_index_scaling.py  test_commented_code_fp.py  test_configurability.py  test_debug_print_fp.py  test_dup_and_sqli.py  test_exception_swallow_control_flow.py  test_file_count_guard.py  test_forensic_fp_clean_code.py  test_forensic_smoke.py  test_fp_fixes.py  test_fp_round2.py  test_gate_profile_default.py  test_go_target_resolution.py  test_java_target_resolution.py  test_job_persistence.py  test_js_target_resolution.py  test_mcp_e2e.py  test_mcp_smoke.py  test_ml_gates.py  test_ml_gates_wired.py  test_oracle_unify_maps.py  test_python_adapter_parity.py  test_resource_safety.py  test_runtime_autosurface.py  test_smoke.py  test_static_clusters.py  test_summary_and_autopath.py  test_swift_adapter.py  test_swift_gates.py  test_swift_target_resolution.py  test_ts_target_resolution.py
vigil_forensic/: __init__.py  _shared.py  gate_models.py  gate_profile.json  gate_registry.py  language_profiles.py  meta_findings.py  self_audit.py  source_analysis.py
vigil_mapper/: __init__.py  _authority_ast.py  _extract_imports_impl.py  _file_count_guard.py  _git_utils.py  _runtime_ast.py  _runtime_dispatch.py  authority_builder.py  cli_entry.py  data_contract_builder.py  fingerprint.py  hotspot_builder.py  map_errors.py  map_models.py  map_storage.py  parse_cache.py  refactor_boundary_builder.py  runtime_builder.py  runtime_tracer.py  runtime_tracer_entry.py  semantic_diff.py  structural_builder.py
vigil_mcp/: __init__.py  _jobs.py  _paths.py  forensic_server.py  map_server.py
(+135 files in other folders)
