[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-codeintel"
version = "0.1.0"
description = "Multi-language code intelligence: structural mapper, forensic gate auditor, and two FastMCP stdio servers"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-language-pack>=1.10",
    "filelock>=3.12,<4",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
]

[project.scripts]
cortex-map-mcp = "cortex_mcp.map_server:main"
cortex-forensic-mcp = "cortex_mcp.forensic_server:main"

[tool.setuptools]
packages = [
    "cortex_map_builder",
    "cortex_map_builder.source_adapters",
    "cortex_forensic",
    "cortex_forensic.gate_checks",
    "cortex_forensic.gate_checks.forensic_clusters",
    "cortex_forensic.gate_checks.forensic_cluster_runners",
    "cortex_forensic.gate_packs",
    "cortex_mcp",
]
